--- a/Power-to-Lux.ipynb
+++ b/Power-to-Lux.ipynb
@@ -14,6 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import modules\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import rc_context\n",
     "from matplotlib import rcParams\n",
@@ -25,17 +26,14 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "#%matplotlib qt\n",
     "%matplotlib inline\n",
     "\n",
+    "# specify sample file path and location of luminous efficacy table for conversion\n",
     "light_file = r'C:\\Users\\tl457\\OneDrive - University Of Cambridge 1\\1_Data\\211104-WhiteLED-Spectrilight\\211104-WhiteLED-INS125-Power.txt'\n",
     "luminous_efficacy_file = r'C:\\Users\\tl457\\OneDrive - University Of Cambridge 1\\1_Data\\Luminous_Efficacy_Tables.csv' # from http://hyperphysics.phy-astr.gsu.edu/hbase/vision/efficacy.html\n",
     "\n",
-    "# specify matplotlib configuration file name\n",
-    "plot_config_path = r'C:\\Users\\tl457\\Documents\\GitHub\\optofluidics\\optofluidics\\optofluidics'\n",
-    "plot_config_file = 'plotting_params.txt'\n",
-    "dir = os.path.abspath(os.path.dirname(plot_config_path))\n",
-    "rc_fname=os.path.join(dir, plot_config_file)"
+    "# specify matplotlib configuration file path\n",
+    "rc_fname = r'C:\\Users\\tl457\\Documents\\GitHub\\spectroscopy\\plotting_params.txt'"
    ]
   },
   {
@@ -47,51 +45,51 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_b97d8_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >value</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_20d26_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >value</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row0\" class=\"row_heading level0 row0\" >Scan Averages</th>\n",
-       "                        <td id=\"T_b97d8_row0_col0\" class=\"data row0 col0\" >10</td>\n",
+       "                        <th id=\"T_20d26_level0_row0\" class=\"row_heading level0 row0\" >Scan Averages</th>\n",
+       "                        <td id=\"T_20d26_row0_col0\" class=\"data row0 col0\" >10</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row1\" class=\"row_heading level0 row1\" >Integration Time</th>\n",
-       "                        <td id=\"T_b97d8_row1_col0\" class=\"data row1 col0\" >8.000000</td>\n",
+       "                        <th id=\"T_20d26_level0_row1\" class=\"row_heading level0 row1\" >Integration Time</th>\n",
+       "                        <td id=\"T_20d26_row1_col0\" class=\"data row1 col0\" >8.000000</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row2\" class=\"row_heading level0 row2\" >X Unit</th>\n",
-       "                        <td id=\"T_b97d8_row2_col0\" class=\"data row2 col0\" >Wavelength [nm]</td>\n",
+       "                        <th id=\"T_20d26_level0_row2\" class=\"row_heading level0 row2\" >X Unit</th>\n",
+       "                        <td id=\"T_20d26_row2_col0\" class=\"data row2 col0\" >Wavelength [nm]</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row3\" class=\"row_heading level0 row3\" >X Max</th>\n",
-       "                        <td id=\"T_b97d8_row3_col0\" class=\"data row3 col0\" >1075.000000</td>\n",
+       "                        <th id=\"T_20d26_level0_row3\" class=\"row_heading level0 row3\" >X Max</th>\n",
+       "                        <td id=\"T_20d26_row3_col0\" class=\"data row3 col0\" >1075.000000</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row4\" class=\"row_heading level0 row4\" >X Min</th>\n",
-       "                        <td id=\"T_b97d8_row4_col0\" class=\"data row4 col0\" >250.000000</td>\n",
+       "                        <th id=\"T_20d26_level0_row4\" class=\"row_heading level0 row4\" >X Min</th>\n",
+       "                        <td id=\"T_20d26_row4_col0\" class=\"data row4 col0\" >250.000000</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row5\" class=\"row_heading level0 row5\" >Y Unit</th>\n",
-       "                        <td id=\"T_b97d8_row5_col0\" class=\"data row5 col0\" >Power [uW/nm]</td>\n",
+       "                        <th id=\"T_20d26_level0_row5\" class=\"row_heading level0 row5\" >Y Unit</th>\n",
+       "                        <td id=\"T_20d26_row5_col0\" class=\"data row5 col0\" >Power [uW/nm]</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row6\" class=\"row_heading level0 row6\" >Y Max</th>\n",
-       "                        <td id=\"T_b97d8_row6_col0\" class=\"data row6 col0\" >460.000000</td>\n",
+       "                        <th id=\"T_20d26_level0_row6\" class=\"row_heading level0 row6\" >Y Max</th>\n",
+       "                        <td id=\"T_20d26_row6_col0\" class=\"data row6 col0\" >460.000000</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row7\" class=\"row_heading level0 row7\" >Y Min</th>\n",
-       "                        <td id=\"T_b97d8_row7_col0\" class=\"data row7 col0\" >0.000000</td>\n",
+       "                        <th id=\"T_20d26_level0_row7\" class=\"row_heading level0 row7\" >Y Min</th>\n",
+       "                        <td id=\"T_20d26_row7_col0\" class=\"data row7 col0\" >0.000000</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row8\" class=\"row_heading level0 row8\" >Cal Flag</th>\n",
-       "                        <td id=\"T_b97d8_row8_col0\" class=\"data row8 col0\" >1</td>\n",
+       "                        <th id=\"T_20d26_level0_row8\" class=\"row_heading level0 row8\" >Cal Flag</th>\n",
+       "                        <td id=\"T_20d26_row8_col0\" class=\"data row8 col0\" >1</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b97d8_level0_row9\" class=\"row_heading level0 row9\" >SN</th>\n",
-       "                        <td id=\"T_b97d8_row9_col0\" class=\"data row9 col0\" >1007131U1</td>\n",
+       "                        <th id=\"T_20d26_level0_row9\" class=\"row_heading level0 row9\" >SN</th>\n",
+       "                        <td id=\"T_20d26_row9_col0\" class=\"data row9 col0\" >1007131U1</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x24b726c2848>"
+       "<pandas.io.formats.style.Styler at 0x2257ce4f788>"
       ]
      },
      "execution_count": 2,
@@ -100,6 +98,7 @@
     }
    ],
    "source": [
+    "# load sample data\n",
     "meta_data=pd.read_csv(light_file,sep='\\t',nrows=10,index_col=0,names=[\"value\"])\n",
     "light_spectrum=pd.read_csv(light_file,sep='\\t',skiprows=10,index_col=0,names=[\"power\"])\n",
     "lum_eff=pd.read_csv(luminous_efficacy_file,skiprows=1,index_col=0,names=[\"photopic\",\"photopic_f\",\"scotopic\",\"scotopic_f\"])\n",
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +122,7 @@
     }
    ],
    "source": [
-    "# Luminous efficacy\n",
+    "# plot luminous efficacy\n",
     "with rc_context(fname=rc_fname):\n",
     "    plt.figure(figsize=(6,2))\n",
     "    plt.plot(lum_eff[\"photopic_f\"])\n",
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +150,7 @@
     }
    ],
    "source": [
-    "# Clean up spectral signal and append to dataframe as new column\n",
+    "# clean up spectral signal using SG filtering and append to dataframe as new column\n",
     "sgf_window=9\n",
     "sgf_order=2\n",
     "light_spectrum[\"power_clean\"]=savgol_filter(light_spectrum[\"power\"],sgf_window,sgf_order) # uW/nm\n",
@@ -163,6 +162,7 @@
     "conf_f=f(light_spectrum.index)\n",
     "light_spectrum[\"lumen\"]=np.multiply(light_spectrum[\"power_clean\"],conf_f*1e-6) # convert from uW to Lm\n",
     "\n",
+    "# plot power and luminous flux\n",
     "with rc_context(fname=rc_fname):\n",
     "    fig,axs=plt.subplots(2,figsize=(6,4),sharex=True)\n",
     "    axs[0].plot(light_spectrum[\"power\"],label='raw')\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,17 +194,17 @@
     }
    ],
    "source": [
-    "# Specify collection area and calculate irradiance (mW/cm^2) and lux (lm/m^2)\n",
+    "# specify collection area and calculate irradiance (mW/cm^2) and lux (lm/m^2)\n",
     "area=math.pi*(1e-2)**2 # m^2\n",
     "light_spectrum[\"irr\"]=np.divide(light_spectrum[\"power_clean\"]*1e-3,area*1e4) #mW/cm^2\n",
     "light_spectrum[\"lux\"]=np.divide(light_spectrum[\"lumen\"],area)\n",
     "\n",
-    "# Integrate to illuminance and irradiance for the [380,770]nm part of the spectrum\n",
+    "# integrate illuminance and irradiance for the [380,770]nm part of the spectrum\n",
     "int_lux=np.trapz(light_spectrum['lux'].values,x=light_spectrum.index)\n",
-    "\n",
     "df_int=light_spectrum.truncate(before=380, after=770)\n",
     "int_irr=np.trapz(df_int['irr'].values,x=df_int.index)\n",
     "\n",
+    "# plot irradiance and illuminance\n",
     "with rc_context(fname=rc_fname):\n",
     "    fig,axs=plt.subplots(2,figsize=(6,4),sharex=True)\n",
     "    axs[0].plot(light_spectrum[\"irr\"])\n",
